--- a/package.json
+++ b/package.json
@@ -14,5 +14,14 @@
     "express": "^4.16.3",
     "firebase": "^5.5.3",
     "twit": "^2.2.11"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ashad15/Tweet.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ashad15/Tweet/issues"
+  },
+  "homepage": "https://github.com/ashad15/Tweet#readme"
 }
