--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "csv-write-stream": "^2.0.0",
+    "csv-writer": "^1.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "fast-csv": "^2.4.1",
